--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="form">
         <form action="">
             <div class="input-group">
-                <label for="url-link">url do vídeo</label>
+                <label for="url-link" class="sr-only">url do vídeo</label>
                 <input 
                     autocomplete="off"
                     type="text"
@@ -23,7 +23,10 @@
             </div>
             
             <div class="input-group">
-                <label for="select-width">Seleciona Largura</label>
+                <label 
+                    for="select-width"   
+                    class="sr-only"
+                >Seleciona Largura</label>
                 <input 
                     type="number"
                     inputmode="numeric"
