add yt-video with css

--- a/index.html
+++ b/index.html
@@ -48,14 +48,19 @@
             </div>
             
             <div class="input-group actions">
-                <input type="submit">
+                <input onclick="ytVideo.open()" type="submit">
                <!-- <button>Iniciar video</button> -->
             </div>
         </form>
     </div>
+
+    <div class="yt-video-background">
+        <div class="yt-video">
+            <iframe width="1080" height="600" src="https://www.youtube.com/embed/ngVU74daJ8Y?start=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
         <!-- https://www.youtube.com/watch?v=ngVU74daJ8Y -->
         
-        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/ngVU74daJ8Y?start=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
