adding <iframe> using JavaScript

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <label for="url-link" class="sr-only">url do vídeo</label>
                 <input 
                     autocomplete="on"
+                    value="https://www.youtube.com/watch?v=ngVU74daJ8Y"
                     type="text"
                     placeholder="Link do vídeo"
                     id="url-link"
@@ -30,6 +31,7 @@
                 >Seleciona Largura</label>
                 <input 
                     type="number"
+                    value="720"
                     inputmode="numeric"
                     autocomplete="off"
                     placeholder="Largura desejada"
@@ -55,7 +57,7 @@
 
     <div class="yt-video-background">
         <div class="yt-video">
-            <iframe width="1080" height="600" src="https://www.youtube.com/embed/ngVU74daJ8Y?start=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
         </div>
     </div>
         <!-- https://www.youtube.com/watch?v=ngVU74daJ8Y -->
