add Object Video

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
             <div class="input-group">
                 <label for="url-link" class="sr-only">url do vídeo</label>
                 <input 
-                    autocomplete="on"
-                    value="https://www.youtube.com/watch?v=ngVU74daJ8Y"
+                    autocomplete="off"
                     type="text"
                     placeholder="Link do vídeo"
                     id="url-link"
@@ -31,7 +30,6 @@
                 >Seleciona Largura</label>
                 <input 
                     type="number"
-                    value="720"
                     inputmode="numeric"
                     autocomplete="off"
                     placeholder="Largura desejada"
