adding light Mode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </head>
 <body>
 
+    <head>
+        <div>
+            <div class="theme" onclick="Utils.toggleTheme()">
+                <button type="button"></button>
+            </div>
+        </div>
+    </head>
+    
     <div id="form">
         <form action="" onsubmit="Form.submit(event)">
             <div class="input-group">
