refactor: organize the files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <script src="https://unpkg.com/phosphor-icons"></script>
 
     <title>youtube customization</title>
@@ -22,9 +22,7 @@
         </div>
     </header>
 
-    <div class="tumbnails off">
-        
-    </div>
+    <div class="tumbnails off"></div>
 
     <div class="menu">
         <div class="input-group">
@@ -85,6 +83,6 @@
         </div>
     </div>
         
-    <script src="./script.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
