refactor: move code from style.css to other css files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../styles/pages/yt-video.css">
+    <link rel="stylesheet" href="../styles/partials/form.css">
+    <link rel="stylesheet" href="../styles/partials/inputs.css">
+    <link rel="stylesheet" href="../styles/partials/scrollbar.css">
+    <link rel="stylesheet" href="../styles/partials/tumbnails.css">
     <link rel="stylesheet" href="../styles/style.css">
+    
     <script src="https://unpkg.com/phosphor-icons"></script>
 
     <title>youtube customization</title>
