--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/partials/inputs.css">
     <link rel="stylesheet" href="../styles/partials/scrollbar.css">
     <link rel="stylesheet" href="../styles/partials/tumbnails.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/main.css">
     
     <script src="https://unpkg.com/phosphor-icons"></script>
 
