--- a/tumbnails.html
+++ b/tumbnails.html
@@ -7,6 +7,7 @@
     <title>tumbnails</title>
     <link rel="stylesheet" href="./styles/partials/inputs.css">
     <link rel="stylesheet" href="./styles/pages/tumbnails.css">
+    <link rel="stylesheet" href="./styles/partials/scrollbar.css">    
     <link rel="stylesheet" href="./styles/main.css">
 
     <script src="https://unpkg.com/phosphor-icons"></script>
